--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
     <footer>
         <p>Todos los derechos reservados por copyright</p>
-        <p>El sitio fue desarrollado por coderhouse</p>
+        <p>El sitio fue desarrollado para practica</p>
         <div class="redes">
             <a href="">
                 <i class="fa-brands fa-square-facebook"></i>
