--- a/index.html
+++ b/index.html
@@ -37,20 +37,14 @@
         <div class="item item7"></div>
         <div class="item item8"></div>
     </section>
-    <footer>
-        <p>Todos los derechos reservados por copyright</p>
-        <p>El sitio fue desarrollado para practica</p>
+    <footer> 
+        <p>Todos los derechos reservados por copyright</p> 
+        <p>El sitio fue desarrollado para practica</p> 
         <div class="redes">
-            <a href="">
-                <i class="fa-brands fa-square-facebook"></i>
-            </a>
-            <a href="">
-                <i class="fa-brands fa-square-instagram"></i>
-            </a>
-            <a href="">
-                <i class="fa-brands fa-square-x-twitter"></i>
-            </a>
-        </div>
+            <a href="https://www.instagram.com/tavacomedor/" target="_blank"> 
+                <i class="fa-brands fa-square-instagram"></i> 
+            </a> 
+        </div> 
     </footer>
     <a href="https://walink.co/eea7a5"class="what">
         <i class="fa-brands fa-whatsapp"></i>
